# snip

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: snip_tsv.py
