[tool.poetry]
name = "snip-snip"
version = "0.1.0"
description = "Crop tabular data files"
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/andrewrosss/snip-snip"
repository = "https://github.com/andrewrosss/snip-snip"
documentation = "https://github.com/andrewrosss/snip-snip"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
reorder-python-imports = "^2.7.1"
bump2version = "^1.0.1"
pre-commit = "^2.17.0"

[tool.poetry.scripts]
snip = "snip_snip:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
